# ryuk

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md
.github/workflows/: run_tests.yml
crates/assets/: Cargo.toml
crates/buffer/: Cargo.toml
crates/buffer/src/: buffer.rs  format_span.rs  selection.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  editor.rs  element.rs  movement.rs  state.rs  tests.rs
crates/editor/src/tests/: context.rs
crates/icons/: Cargo.toml
crates/ryuk/: Cargo.toml
crates/ryuk/src/: main.rs
crates/text/: Cargo.toml
crates/text/src/: text.rs
crates/ui/: Cargo.toml
crates/ui/src/: button.rs  button_like.rs  icon_button.rs
crates/util/: Cargo.toml
crates/util/src/: test.rs
crates/util/src/test/: marked_text.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: dock.rs  pane.rs  status_bar.rs  workspace.rs
script/: clippy  clippy.ps1  prettier
