[workspace]
resolver = "3"
members = [
  "crates/assets",
  "crates/buffer",
  "crates/editor",
  "crates/icons",
  "crates/ryuk",
  "crates/text",
  "crates/ui",
  "crates/util",
  "crates/workspace",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false
license = "AGPL-3.0-or-later"
authors = ["Mayank Verma <errmayank@gmail.com>"]

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.dependencies]
################################################################
# External crates
################################################################
anyhow = { version = "1.0" }
gpui = { git = "https://github.com/zed-industries/zed" }
indoc = { version = "2.0" }
pretty_assertions = { version = "1.4" }
ropey = { version = "1.6" }
rust-embed = { version = "8.0", features = ["debug-embed"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.15" }
strum = { version = "0.26", features = ["derive"] }
################################################################
# Workspace member crates
################################################################
assets = { path = "crates/assets" }
buffer = { path = "crates/buffer" }
editor = { path = "crates/editor" }
icons = { path = "crates/icons" }
text = { path = "crates/text" }
ui = { path = "crates/ui" }
util = { path = "crates/util" }
workspace = { path = "crates/workspace" }
