[package]
name = "editor"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "editor"
path = "src/editor.rs"

[dependencies]
buffer = { workspace = true }
gpui = { workspace = true }
text = { workspace = true }
ui = { workspace = true }
