[package]
name = "ryuk"
description = "Notes app."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
assets = { workspace = true }
gpui = { workspace = true }
workspace = { workspace = true }
