[package]
name = "workspace"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
name = "workspace"
path = "src/workspace.rs"

[dependencies]
gpui = { workspace = true }
ui = { workspace = true }
